--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,14 +1,45 @@
+/* Universal */
+
+*{
+margin: 0;
+padding: 0;
+box-sizing: border-box;}
+
+/* Containers */
 
 body {
-  margin: 0;
-  overflow: hidden;
-  background-color: #fff;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;}
+margin: 0;
+overflow: hidden;
+/* background-color: #fff;
+display: flex;
+justify-content: center;
+align-items: center;
+height: 100vh  */
+    
+canvas {
+background: #fff; 
+border: solid 2px;
+position: relative;
+left: 50%;
+translate: -50% 0;
+height: 75vh;
+width: 75vh;}
+    
+/* Targeted */
+
+#controls {
+display: flex;
+justify-content: space-around;
+padding: 10px;
+}
+    
+    #controls > button {
+        padding: 5px 8px;}    
     
 #stickFigure {
-    position: absolute;
-    width: 300px;
-    height: auto;}
+position: absolute;
+width: 300px;
+height: auto;}
+    
+#tilemap {
+display: none;}
