--- a/styles/styles.css
+++ b/styles/styles.css
@@ -18,27 +18,28 @@ height: 100vh  */
     
 canvas {
 background: #fff; 
-border: solid 2px;
 position: relative;
 left: 50%;
 translate: -50% 0;
-height: 75vh;
-width: 75vh;}
+height: 30vw;
+width: 90vw;
+image-rendering: crisp-edges;
+image-rendering: pixelated;}
     
 /* Targeted */
 
 #controls {
 display: flex;
 justify-content: space-around;
-padding: 10px;
+padding: 75px 10px;
 }
     
     #controls > button {
         padding: 5px 8px;}    
     
-#stickFigure {
+#playerCharacter {
 position: absolute;
-width: 300px;
+width: 12vw;
 height: auto;}
     
 #tilemap {
