Background Shift to Grid

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -21,7 +21,7 @@ background: #fff;
 position: relative;
 left: 50%;
 translate: -50% 0;
-height: 30vw;
+height: auto;
 width: 90vw;
 image-rendering: crisp-edges;
 image-rendering: pixelated;}
@@ -31,15 +31,14 @@ image-rendering: pixelated;}
 #controls {
 display: flex;
 justify-content: space-around;
-padding: 75px 10px;
-}
+padding: 75px 10px;}
     
     #controls > button {
         padding: 5px 8px;}    
     
 #playerCharacter {
 position: absolute;
-width: 12vw;
+width: 11.25vw;
 height: auto;}
     
 #tilemap {
