--- a/styles/styles.css
+++ b/styles/styles.css
@@ -22,9 +22,7 @@ position: relative;
 left: 50%;
 translate: -50% 0;
 height: auto;
-width: 90vw;
-image-rendering: crisp-edges;
-image-rendering: pixelated;}
+width: 90vw;}
     
 /* Targeted */
 
