--- a/styles/styles.css
+++ b/styles/styles.css
@@ -28,11 +28,12 @@ width: 90vw;}
 
 #controls {
 display: flex;
-justify-content: space-around;
+justify-content: center;
 padding: 20px 10px;}
     
     #controls > button {
-        padding: 5px 8px;}    
+        padding: 5px 8px;
+        margin: 10px;}    
     
 #tilemap {
 display: none;}
